--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: [3.9]
     env:
       ETH_PRIVATE_KEY: ${{ secrets.ETH_PRIVATE_KEY }}
       ENDPOINT: ${{ secrets.ENDPOINT }}
@@ -37,9 +37,18 @@ jobs:
     - name: Lint with flake8
       run: |
         flake8 .
-    - name: Build binary
+    - name: Build binary in 20.04 environment
       run: |
-        bash scripts/build.sh 0.0.0 test-branch
+        mkdir dist
+        docker build . -t builder
+        docker run  -v /home/ubuntu/dist:/app/dist builder scripts/build.sh test test
+        ls -altr /home/ubuntu/dist/
+        docker rm -f $(docker ps -aq)
+
+    - name: Build binary in Ubuntu lastest environment
+      run: |
+        scripts/build.sh test test
+
     - name: Deploy manager contracts
       run: |
         bash ./helper-scripts/deploy_test_manager.sh
