--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,8 @@ on:
       - develop
       - beta
       - stable
+  push:
+      - test-build
 
 jobs:
   create_release:
@@ -47,10 +49,10 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-20.04
-            asset_name: sk-val-${{ needs.create_release.outputs.version }}-Linux-x86_64
-            # - os: macos-latest
-            #   asset_name: sk-val-${{ needs.create_release.outputs.version }}-Darwin-x86_64
+          # - os: ubuntu-20.04
+          #   asset_name: sk-val-${{ needs.create_release.outputs.version }}-Linux-x86_64
+          - os: macos-latest
+            asset_name: sk-val-${{ needs.create_release.outputs.version }}-Darwin-x86_64
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
@@ -93,50 +95,50 @@ jobs:
         bash ./scripts/build.sh ${{ needs.create_release.outputs.version }} ${{ needs.create_release.outputs.branch }}
         sudo shasum -a 512 ./dist/${{ matrix.asset_name }} | sudo tee > /dev/null ./dist/sha512sum
 
-    - name: Upload Release Asset Ubuntu
-      if: matrix.os == 'ubuntu-20.04'
-      id: upload-release-asset-ubuntu
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ needs.create_release.outputs.upload_url }}
-        asset_path: /home/ubuntu/dist/${{ matrix.asset_name }}
-        asset_name: ${{ matrix.asset_name }}
-        asset_content_type: application/octet-stream
+        # - name: Upload Release Asset Ubuntu
+        #   if: matrix.os == 'ubuntu-20.04'
+        #   id: upload-release-asset-ubuntu
+        #   uses: actions/upload-release-asset@v1
+        #   env:
+        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   with:
+        #     upload_url: ${{ needs.create_release.outputs.upload_url }}
+        #     asset_path: /home/ubuntu/dist/${{ matrix.asset_name }}
+        #     asset_name: ${{ matrix.asset_name }}
+        #     asset_content_type: application/octet-stream
 
-    - name: Upload release checksum
-      if: matrix.os == 'ubuntu-20.04'
-      id: upload-release-checksum-ubuntu
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ needs.create_release.outputs.upload_url }}
-        asset_path: /home/ubuntu/dist/sha512sum
-        asset_name: ${{ matrix.asset_name }}.sha512
-        asset_content_type: text/plain
+        # - name: Upload release checksum
+        #   if: matrix.os == 'ubuntu-20.04'
+        #   id: upload-release-checksum-ubuntu
+        #   uses: actions/upload-release-asset@v1
+        #   env:
+        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   with:
+        #     upload_url: ${{ needs.create_release.outputs.upload_url }}
+        #     asset_path: /home/ubuntu/dist/sha512sum
+        #     asset_name: ${{ matrix.asset_name }}.sha512
+        #     asset_content_type: text/plain
 
-    - name: Upload Release Asset Mac
-      if: matrix.os == 'macos-latest'
-      id: upload-release-asset-mac
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ needs.create_release.outputs.upload_url }}
-        asset_path: ./dist/${{ matrix.asset_name }}
-        asset_name: ${{ matrix.asset_name }}
-        asset_content_type: application/octet-stream
+        # - name: Upload Release Asset Mac
+        #   if: matrix.os == 'macos-latest'
+        #   id: upload-release-asset-mac
+        #   uses: actions/upload-release-asset@v1
+        #   env:
+        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   with:
+        #     upload_url: ${{ needs.create_release.outputs.upload_url }}
+        #     asset_path: ./dist/${{ matrix.asset_name }}
+        #     asset_name: ${{ matrix.asset_name }}
+        #     asset_content_type: application/octet-stream
 
-    - name: Upload release checksum
-      if: matrix.os == 'macos-latest'
-      id: upload-release-checksum-mac
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ needs.create_release.outputs.upload_url }}
-        asset_path: ./dist/sha512sum
-        asset_name: ${{ matrix.asset_name }}.sha512
-        asset_content_type: text/plain
+        # - name: Upload release checksum
+        #   if: matrix.os == 'macos-latest'
+        #   id: upload-release-checksum-mac
+        #   uses: actions/upload-release-asset@v1
+        #   env:
+        #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   with:
+        #     upload_url: ${{ needs.create_release.outputs.upload_url }}
+        #     asset_path: ./dist/sha512sum
+        #     asset_name: ${{ matrix.asset_name }}.sha512
+        #     asset_content_type: text/plain
