--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,24 +27,24 @@ jobs:
       - name: Set Versions
         run: |
           bash ./scripts/set_versions_ga.sh
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.VERSION }}
-          release_name: ${{ env.VERSION }}
-          draft: false
-          prerelease: true
+          # - name: Create Release
+          #   id: create_release
+          #   uses: actions/create-release@v1
+          #   env:
+          #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          #   with:
+          #     tag_name: ${{ env.VERSION }}
+          #     release_name: ${{ env.VERSION }}
+          #     draft: false
+          #     prerelease: true
       - name: Export outputs
         id: export_outputs
         run: |
           echo "::set-output name=version::$VERSION"
           echo "::set-output name=branch::$BRANCH"
   build_and_publish:
-    if: github.event.pull_request.merged
-    needs: create_release
+    # if: github.event.pull_request.merged
+    # needs: create_release
     name: Build and publish for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
